# IP

./: Game_Plan.ipynb  IP.ipynb  README.md  eval.py  gguf.py  list_lm_eval.py  main.ipynb  main.py  pyproject.toml  val_dataset.json
A Three-Dimensional Analysis for LLM Deployment/: README.md  pyproject.toml  txt.txt
A Three-Dimensional Analysis for LLM Deployment/src/: cpu_test.ipynb  gpu_test.ipynb  llama_cpp.ps1  main.py  quant_bitsandbytes.py
A Three-Dimensional Analysis for LLM Deployment/tools/: eval.py  kv_cache_calc.py
Context Engineering/: README.md  main.ipynb  pyproject.toml
Context Engineering/prompts/: PromptPhi.md  PromptQwen.md
How To RAG/: Phi-3.5-mini-instruct-Q4 RAG System Analysy.csv  RAG.ipynb  README.md  chunking.ipynb  dataset-Mistral.json  dkmc.txt  eval.ipynb  main.py  output.json  parsing.ipynb  pyproject.toml  rag.ipynb  ragggg.ipynb  syndata.ipynb  syndataeval.ipynb  txt.txt  val_dataset.json
How To RAG/code/: chunking.ipynb  codesolto.py  parsing.ipynb  parsing.txt.txt  ragv1.ipynb  teste.py  testeparsing.ipynb
How To RAG/docs/: Alfa_Romeo.docx  Cultura_Itália.docx  Infraestruturas de Portugal.txt  Manuel Alegre de Melo Duarte.docx  Mundial de Futebol.txt  Primeira Guerra Mundial.txt  projeto ip doc.docx
How To RAG/eval/: MeanReciprocalRank.py  Precision.py  Recall.py  dataset.json  dataset_pós_answer.json  hitrate.py  mrr.py  recallk.py
How To RAG/eval/gen_eval/: Mistral-7B-Instruct-v0.3-Q4 RAG System Analysys (TESTE com System Prompt diferente).csv  Phi-3.5-mini-instruct-Q4 - Output Analysis.csv  Qwen2.5-0.5B-Instruct - Output Analysis.csv  Qwen2.5-0.5B-Instruct RAG System Analysy.csv
How To RAG/prompteng/: PromptQwen.md
Synthetic Data/: SyntheticData.ipynb  SyntheticDataEval.ipynb  dataset-Mistral.json  dataset-Phi4.json  pyproject.toml
Week 1/: main.ipynb  quant.py
Week 2/: CPU.ipynb  GPU.ipynb  KV_CACHE.py  main.ipynb  main.py
graphs/: KV_CACHE.py  qwen4Bbase.ipynb
react/: index.html
teste/: index.html  package-lock.json
teste/src/: App.jsx  main.jsx
teste/src/header/: Header.css  Header.jsx
teste/src/main/: Main.css  Main.jsx
teste/src/menulogo/: MenuLogo.css  MenuLogo.jsx
