[project]
name = "ip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "humanize>=4.15.0",
    "matplotlib>=3.10.9",
    "torchaudio",
    "torchvision",
    "transformers>=5.9.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
