[project]
name = "a-three-dimensional-analysis-for-llm-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "humanize>=4.15.0",
    "ipykernel>=7.2.0",
    "lm-eval>=0.4.12",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=5.10.2",
]
