[project]
name = "context-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.14.0",
    "ipykernel>=7.3.0",
    "outlines>=1.3.1",
    "torch>=2.13.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.28.0",
    "transformers>=5.14.1",
]
