[project]
name = "how-to-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.14.2",
    "ipykernel>=7.2.0",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.10.2",
    "unstructured>=0.22.32",
]
