[project]
name = "how-to-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.14.0",
    "faiss-cpu>=1.14.3",
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.12.1",
    "unstructured-inference>=1.6.13",
    "unstructured[docx,pdf]>=0.23.1",
]
