[project]
name = "how-to-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.14.0",
    "bitsandbytes>=0.49.2",
    "faiss-cpu>=1.14.3",
    "ipykernel>=7.3.0",
    "langchain>=0.3.30",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.86",
    "langchain-huggingface>=0.3.1",
    "markdown>=3.10.2",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "pymupdf4llm>=1.27.2.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=5.12.1",
    "unstructured-inference>=1.2.0",
    "unstructured[docx,pdf]>=0.18.32",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
